# depyler

./: .bashrsignore  .clippy.toml  .editorconfig  .env.ramdisk  .gitignore  .pmat-gates.toml  .pmat-metrics.toml  AGENT.md  API.md  BASHRS_QUICKSTART.md  BASHRS_VALIDATION_COMPLETE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  COMPREHENSIVE-SESSION-SUMMARY-2025-10-03.md  CONTRIBUTING.md  COVERAGE_IMPROVEMENTS_REPORT.md  Cargo.toml  DEPYLER-0004-COMPLETION.md  DEPYLER-0020-0021-SESSION.md  DISTRIBUTION.md  DOCKER.md  DOCUMENTATION_IMPROVEMENTS.md  Dockerfile  Dockerfile.agent  EXAMPLE_VALIDATION_STATUS.md  EXECUTIVE-SUMMARY.md  FINAL-RELEASE-SUMMARY-2025-10-03.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_RELEASE_COMMANDS.md  FINAL_STATUS_REPORT.md  GEMINI.md  GREEN_LIST.md  INTEGRATION_BENCHMARKING_REPORT.md  MCP_SUBMISSION.md  MIGRATION_GUIDE_v3.md  MUTATION-TESTING-BREAKTHROUGH.md  MUTATION-TESTING-INFRASTRUCTURE-COMPLETE.md  MUTATION-TESTING-PHASE-2-COMPLETE.md  MUTATION-TESTING-SESSION-2.md  (+370 more)
crates/depyler/: A0_NP3_ao.gdb  A2jDELBN_.gdb  A3.gdb  A3.lldb  A6.gdb  AF_UOE8y8_uI2_N_ec9.gdb  AUa85hP_Bf_a2_RgJSK_.gdb  AV.lldb  A_ME7_.lldb  A_Q_c_8BrLuP.gdb  A__6ei_uO1FA_F_yRPjm.lldb  Ac2T6ipGv9z_AZvpYG_.gdb  Ah9_N4K6_ul4wic9XaK.gdb  Akaur_h4FmJG_2J_t_.gdb  AmJjUS_nt_j.gdb  B.lldb  B0V.gdb  B1_.lldb  B40luS5yfp8m9KI_KC4_a.gdb  B4q1t_0t5h.gdb  B5MVm_CJ3_0qA5mjRI5d.gdb  B7BuzMEDY1Qb9c9UfM.gdb  B8W_M.gdb  BH.gdb  BRnFt_PLd5_7_P.lldb  BVNY.lldb  BWpe_cDDZ1.gdb  BZ74F7Y90___85OH1.gdb  B_2P_lKR7BE.gdb  B_LQy_8mG.gdb  B_O.gdb  B_Q7Z3zK_R0EA_f.gdb  B_vb__4X8Zf_.gdb  Bm.lldb  Bm__kPF05u6p.lldb  BquxM0vnUl_DRL_5.gdb  Bz4_a0xNRUCd_F334_2.gdb  C.gdb  C.lldb  C0KBT_W_u.gdb  (+978 more)
crates/depyler-analysis/: Cargo.toml
crates/depyler-analyzer/: Cargo.toml
crates/depyler-annotations/: Cargo.toml
crates/depyler-core/: Cargo.toml
crates/depyler-corpus/: Cargo.toml
crates/depyler-graph/: Cargo.toml
crates/depyler-hir/: Cargo.toml
crates/depyler-knowledge/: Cargo.toml
crates/depyler-lambda/: Cargo.toml
crates/depyler-mcp/: Cargo.toml
crates/depyler-oracle/: Cargo.toml
crates/depyler-quality/: Cargo.toml
crates/depyler-ruchy/: Cargo.toml
crates/depyler-testing/: Cargo.toml
crates/depyler-tooling/: Cargo.toml
crates/depyler-verify/: Cargo.toml
crates/depyler-wasm/: Cargo.toml
examples/: Cargo.toml  EXAMPLES_REPORT.md  README.md  array_functions_test  array_functions_test.py  array_functions_test.rs  array_test  array_test.py  array_test.rs  ast_converters_demo.py  ast_converters_demo.rs  basic_class_test  basic_class_test.py  basic_class_test.rs  basic_lambda  basic_lambda.py  basic_lambda.rs  claude_desktop_config.json  config.json  custom_attributes_demo  custom_attributes_demo.py  custom_attributes_demo.rs  data_analysis_combined  data_analysis_combined.py  data_analysis_combined.rs  debugging_workflow.py  debugging_workflow.rs  deep_nested_dict  deep_nested_dict.py  deep_nested_dict.rs  demo  demo.py  demo.rs  dict_assign  dict_assign.py  dict_assign.rs  dict_assign_typed  dict_assign_typed.py  dict_assign_typed.rs  error_demo.rs  (+2476 more)
examples/algorithms/: Cargo.toml  binary_search_simple.py  binary_search_simple.rs  fibonacci.py  fibonacci.rs  quicksort.py  quicksort.rs
examples/argparse_cli/: .gitignore  Cargo.toml  README.md  pytest.ini  requirements-test.txt  simple_cli  simple_cli.py  simple_cli.rs  test_kwargs  test_kwargs.py  test_kwargs.rs  test_type_inference.py  test_type_inference.rs
examples/comprehensive_cli/: Cargo.toml  comprehensive_cli  comprehensive_cli.py  comprehensive_cli.rs  main.rs.new
examples/data_processing/: Cargo.toml  list_operations.py  list_operations.rs
examples/data_structures/: Cargo.toml  queue.py  queue.rs  stack.py  stack.rs
examples/file_processing/: Cargo.toml  csv_parser.py  csv_parser.rs  log_analyzer.py  log_analyzer.rs
examples/game_development/: Cargo.toml  tic_tac_toe.py  tic_tac_toe.rs
examples/marco_polo_cli/: COMPARISON.md  Cargo.toml  README.md  TESTING.md  demo.sh  inspect_demo.sh  marco_polo.py  marco_polo.rs  marco_polo_annotated.py  marco_polo_annotated.rs  marco_polo_simple.py  marco_polo_simple.rs
examples/mathematical/: Cargo.toml  basic_math.py  basic_math.rs  geometry.py  geometry.rs  statistics.py  statistics.rs
examples/networking/: Cargo.toml  http_client.py  http_client.rs
examples/showcase/: Cargo.toml  annotated_example.py  annotated_example.rs  binary_search.py  binary_search.rs  calculate_sum.py  calculate_sum.rs  classify_number.py  classify_number.rs  contracts_example.py  contracts_example.rs  process_config.py  process_config.rs
examples/string_processing/: Cargo.toml  string_utils.py  string_utils.rs  text_analyzer.py  text_analyzer.rs
examples/test_heterogeneous_dict/: Cargo.toml
examples/test_project/: Cargo.toml  data_processor.py  data_processor.rs  fibonacci.py  fibonacci.rs  fibonacci_golden.json
examples/validation/: Cargo.toml  phase5_validation.md  test_all.py  test_all.rs  test_async.py  test_async.rs  test_with.py  test_with.rs
examples/web_scraping/: Cargo.toml  url_parser.py  url_parser.rs
playground/depyler-playground/: Cargo.toml
tdd-book/: .coverage  .gitignore  BUG-copy-module.md  BUG-memoryview-module.md  BUG-re-module.md  BUG-struct-module.md  INTEGRATION.md  Makefile  Makefile.lint-report.txt  QUALITY_REPORT.md  README.md  RELEASE_SUMMARY_v4.0.0.md  VALIDATION-COMPREHENSIVE-2025-10-26.md  VALIDATION-FINAL-2025-10-26.md  VALIDATION-SUMMARY-2025-10-26.md  VALIDATION-SUMMARY.md  VALIDATION-json-module.md  book.toml  mkdocs.yml  pyproject.toml  requirements.txt
tdd-book/docs/: README.md  SUMMARY.md  cli-usage.md  index.md  integration.md  oracle.md
tdd-book/scripts/: extract_examples.py
tdd-book/src/: SUMMARY.md  citl-corpus-extraction.md  cli-usage.md  convergence-protocol.md  corpus-report.md  generative-repair.md  hunt-mode.md  introduction.md  module-mapping.md  oracle.md
tdd-book/tests/: conftest.py  test_array.py  test_base64.py  test_calendar.py  test_cli_usage_chapter.py  test_collections.py  test_copy.py  test_csv.py  test_datetime.py  test_decimal.py  (+19 more)
(+2554 files in other folders)
