[workspace]
members = [
    "crates/depyler-core",
    "crates/depyler-analyzer",
    "crates/depyler-verify",
    "crates/depyler-annotations",
    "crates/depyler-quality",
    "crates/depyler",
    "crates/depyler-ruchy",
    "crates/depyler-testing",
    "crates/depyler-oracle",
    "crates/depyler-corpus",
    "crates/depyler-knowledge",
    "crates/depyler-graph",
]
exclude = [
    "crates/depyler-mcp",
    "examples",
    "examples/argparse_cli",
    "examples/comprehensive_cli",
    "examples/test_project",
    "examples/test_heterogeneous_dict",
    "examples/marco_polo_cli",
]
resolver = "2"

[workspace.metadata.testing]
# Certeza tiered testing configuration
tier1_timeout_ms = 1000  # Sub-second tests
tier2_timeout_ms = 300000  # 5 minutes
tier3_timeout_ms = 14400000  # 4 hours

[workspace.metadata.quality]
max_tdg_score = 2.0
min_coverage = 85.0
max_cyclomatic_complexity = 15
required_documentation_coverage = 100.0

[workspace.package]
version = "3.25.0"
edition = "2021"
authors = ["Depyler Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/paiml/depyler"
homepage = "https://github.com/paiml/depyler"
documentation = "https://docs.rs/depyler"
description = "A Python-to-Rust transpiler focusing on energy-efficient, safe code generation with progressive verification"
keywords = ["python", "rust", "transpiler", "compiler", "verification"]
categories = ["compilers", "development-tools", "parser-implementations"]
readme = "README.md"
rust-version = "1.83"

[workspace.dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
# Pin serde to version compatible with swc_common (used by pmat)
serde = { version = ">=1.0.200, <1.0.220", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Python parsing (use num-bigint instead of malachite-bigint for lighter builds)
rustpython-parser = { version = "0.4", default-features = false, features = ["location", "num-bigint"] }
rustpython-ast = { version = "0.4", default-features = false, features = ["location", "num-bigint"] }

# Code generation (extra-traits not needed - saves compile time)
syn = { version = "2.0", features = ["full", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"
indexmap = "2.0"
smallvec = { version = "1.0", features = ["serde"] }
regex = "1.10"

# Testing and verification
quickcheck = "1.0"
quickcheck_macros = "1.0"
proptest = "1.0"
insta = "1.0"
tempfile = "3.14"
rand = "0.8"
md5 = "0.7"

# Hash functions
fnv = "1.0.3"  # FNV hash for HashMap optimization

# Graph algorithms
petgraph = "0.7"

# CLI
clap = { version = "4.0", features = ["derive", "cargo"] }
indicatif = "0.17"
colored = "2.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
toml = "0.8"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

# CI profile - fast builds, still optimized but no LTO
[profile.ci]
inherits = "release"
lto = "thin"              # Much faster than "fat"
codegen-units = 16        # Parallel codegen
strip = false             # Skip stripping

# Size-optimized build for distribution
[profile.min-size]
inherits = "release"
opt-level = "z"           # Optimize for size
lto = "fat"               # Full link-time optimization
codegen-units = 1         # Single codegen unit
panic = "abort"           # Remove panic unwinding
strip = true              # Strip all symbols

# Fast development builds
[profile.dev-fast]
inherits = "dev"
opt-level = 1
incremental = true
codegen-units = 16

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.bench]
inherits = "release"
debug = true              # Keep debug info for profiling
strip = false            # Keep symbols for flamegraphs

# Optimize dependencies in all profiles
[profile.release.package."*"]
opt-level = 3

[profile.min-size.package."*"]
opt-level = "z"

[profile.dev-fast.package."*"]
opt-level = 1

# No patches - using crates.io versions for all dependencies
