[package]
name = "depyler-analyzer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
depyler-core = { path = "../depyler-core" }
depyler-annotations = { path = "../depyler-annotations" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
petgraph.workspace = true
indexmap.workspace = true
smallvec.workspace = true

[dev-dependencies]
insta.workspace = true