[package]
name = "depyler-analyzer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Static analysis and optimization engine for Depyler"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
depyler-core = { version = "3.19.18", path = "../depyler-core" }
depyler-annotations = { version = "3.19.18", path = "../depyler-annotations" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
smallvec.workspace = true

[dev-dependencies]
insta.workspace = true
