[package]
name = "depyler-annotations"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Annotation parsing and processing for Depyler"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]