[package]
name = "depyler-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Core transpilation engine for the Depyler Python-to-Rust transpiler"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
rustpython-parser.workspace = true
rustpython-ast.workspace = true
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
indexmap.workspace = true
smallvec.workspace = true
depyler-annotations = { version = "3.19.18", path = "../depyler-annotations" }
colored.workspace = true

[features]
default = []
wasm = ["web-time"]
deterministic = []
ruchy = []
# Chaos engineering features (renacer pattern)
chaos-basic = []
chaos-network = ["chaos-basic"]
chaos-byzantine = ["chaos-basic"]
chaos-full = ["chaos-network", "chaos-byzantine"]

[dependencies.web-time]
workspace = true
optional = true

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
quickcheck.workspace = true
tempfile.workspace = true
toml.workspace = true
