[package]
name = "depyler-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Core transpilation engine for the Depyler Python-to-Rust transpiler"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
rustpython-parser.workspace = true
rustpython-ast.workspace = true
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
indexmap.workspace = true
smallvec.workspace = true
depyler-annotations = { version = "3.19.18", path = "../depyler-annotations" }
colored.workspace = true
fnv.workspace = true
tempfile.workspace = true
toml.workspace = true

[features]
default = []
deterministic = []
ruchy = []
# PHF compile-time perfect hash optimization (DEPYLER-O1MAP-001)
phf-lookup = ["phf"]
# Decision tracing for CITL (Compiler-in-the-Loop) training
# Captures transpiler decisions for pattern learning
decision-tracing = ["memmap2", "rmp-serde", "lazy_static"]
# Legacy alias for backward compatibility
enable-decision-tracing = ["decision-tracing"]
# Chaos engineering features (renacer pattern)
chaos-basic = []
chaos-network = ["chaos-basic"]
chaos-byzantine = ["chaos-basic"]
chaos-full = ["chaos-network", "chaos-byzantine"]
# Generative repair via entrenar MCTS/GAN (DEPYLER-ENTRENAR-001)
generative = ["entrenar"]


# Decision tracing dependencies (optional)
[dependencies.memmap2]
version = "0.9"
optional = true

[dependencies.rmp-serde]
version = "1.1"
optional = true

[dependencies.lazy_static]
version = "1.4"
optional = true

# PHF compile-time perfect hash (DEPYLER-O1MAP-001)
[dependencies.phf]
version = "0.11"
features = ["macros"]
optional = true

# Generative repair via MCTS/GAN (DEPYLER-ENTRENAR-001)
# Uses local path for development; switch to version for release
[dependencies.entrenar]
path = "/home/noah/src/entrenar"
optional = true
default-features = false

[build-dependencies]
phf_codegen = "0.11"

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
quickcheck.workspace = true
tempfile.workspace = true
verificar = "0.5.0"
regex.workspace = true
