[package]
name = "depyler-hir"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "High-level Intermediate Representation types for the Depyler transpiler"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde_json.workspace = true
fnv.workspace = true
depyler-annotations = { path = "../depyler-annotations", version = "4.1.1" }

[dependencies.rmp-serde]
version = "1.1"
optional = true

[dependencies.lazy_static]
version = "1.4"
optional = true

[features]
default = []
# Decision tracing for CITL (Compiler-in-the-Loop) training
decision-tracing = ["rmp-serde", "lazy_static"]
