[package]
name = "depyler-knowledge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Sovereign Type Database for Python library type extraction"
keywords = ["python", "types", "stubs", "pyi", "parquet"]
categories = ["development-tools", "parser-implementations"]

[dependencies]
# Core
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Python parsing (for .pyi stub files)
rustpython-parser.workspace = true
rustpython-ast.workspace = true

# File system traversal
walkdir = "2"

# CLI
clap.workspace = true

[features]
default = []
parquet-storage = []  # Enable Parquet/Arrow TypeDB storage (requires external deps)

[[bin]]
name = "build-type-db"
path = "src/bin/build_type_db.rs"
required-features = ["parquet-storage"]

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
