[package]
name = "depyler-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
depyler-core = { path = "../depyler-core" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync"] }
reqwest.workspace = true
syn.workspace = true

[dev-dependencies]
insta.workspace = true