[package]
name = "depyler-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Model Context Protocol integration for Depyler"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
depyler-core = { version = "0.3.1", path = "../depyler-core" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync"] }
reqwest.workspace = true
syn.workspace = true

[dev-dependencies]
insta.workspace = true