[package]
name = "depyler-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Model Context Protocol integration for Depyler"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
depyler-core = { version = "1.0.2", path = "../depyler-core" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync"] }
tokio-util.workspace = true
pmcp.workspace = true
async-trait.workspace = true
syn.workspace = true

[features]
default = ["stdio"]
stdio = []
websocket = ["pmcp/websocket"]
http = ["pmcp/http"]
validation = ["pmcp/validation"]
full = ["stdio", "websocket", "http", "validation"]

[dev-dependencies]
insta.workspace = true