[package]
name = "depyler-oracle"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ML-powered compile error classification and auto-fixing using aprender models"
keywords = ["depyler", "ml", "error-classification", "auto-fix"]
categories = ["development-tools"]

[features]
default = ["gpu", "compressed-models"]
gpu = ["aprender/gpu"]  # Enable GPU acceleration for ML training
compressed-models = ["aprender/format-compression"]  # Zstd compression (lossless, 14x smaller)
local-llm = ["llama-cpp-2"]

[[bin]]
name = "extract-training-data"
path = "src/bin/extract_training_data.rs"

[dependencies]
# Depyler core for error types
depyler-core = { path = "../depyler-core" }

# ML models from aprender
# Features: parallel (rayon), gpu (wgpu via trueno)
aprender = { version = "0.14.0", default-features = true }

# CITL training framework for pattern store (Issue #172)
entrenar = { version = "0.2.2", features = ["citl"] }

# Data loading and versioning
alimentar = "0.2.2"
arrow = { version = "54", default-features = false, features = ["prettyprint"] }
parquet = { version = "54", default-features = false, features = ["arrow", "snap"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# Regex for pattern matching in autofixer
regex.workspace = true

# Home directory detection
dirs = "5"

# Timestamps for training data
chrono = "0.4"

# UUID parsing for pattern IDs
uuid = "1.18"

# Directory traversal for corpus extraction
walkdir = "2"

# CLI parsing for binary
clap = { version = "4", features = ["derive"] }

# HTTP client for API fallback
ureq = { version = "2.9", features = ["json"] }

# Local LLM inference via llama.cpp
llama-cpp-2 = { version = "0.1", optional = true }

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true

# Synthetic data factory for corpus generation
verificar = "0.5.0"
