[package]
name = "depyler-oracle"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ML-powered compile error classification and auto-fixing using aprender models"
keywords = ["depyler", "ml", "error-classification", "auto-fix"]
categories = ["development-tools"]

[features]
default = []
training = ["dep:entrenar", "dep:arrow", "dep:parquet"]  # CITL training pipeline (adds ~314 transitive deps)
gpu = ["aprender/gpu"]  # Enable GPU acceleration for ML training (adds wgpu/trueno stack)
compressed-models = ["aprender/format-compression"]  # Zstd compression (lossless, 14x smaller)

[[bin]]
name = "extract-training-data"
path = "src/bin/extract_training_data.rs"
required-features = ["training"]

[dependencies]
# Depyler core for error types
depyler-core = { version = "3.25.0", path = "../depyler-core" }

# ML models from aprender
# Features: parallel (rayon), gpu (wgpu via trueno)
# Issue #210: Code2Vec embeddings and GNN capabilities
aprender = { version = "0.20.2", default-features = false }

# CITL training framework for pattern store (Issue #172)
# Issue #212: Also using monitor::ModelLineage for training state tracking
entrenar = { version = "0.5", default-features = false, features = ["citl"], optional = true }

# Data loading and versioning (minimal features - just local file loading)
alimentar = { version = "0.2.2", default-features = false, features = ["local"], optional = true }
arrow = { version = "54", default-features = false, features = ["prettyprint"], optional = true }
parquet = { version = "54", default-features = false, features = ["arrow", "snap"], optional = true }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Regex for pattern matching in autofixer
regex.workspace = true

# AST parsing for Code2Vec (GH-210 Phase 2)
syn = { workspace = true, features = ["full", "parsing", "visit"] }
quote.workspace = true
rustpython-parser.workspace = true
rustpython-ast.workspace = true

# Home directory detection
dirs = "5"

# Timestamps for training data
chrono = "0.4"

# UUID parsing for pattern IDs
uuid = "1.18"

# Directory traversal for corpus extraction
walkdir = "2"

# Glob pattern matching for UTOL
glob = "0.3"

# CLI parsing for binary
clap = { version = "4", features = ["derive"] }

# HTTP client for API fallback
ureq = { version = "2.9", features = ["json"] }

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true

# Synthetic data factory for corpus generation
verificar = "0.5.0"
