[package]
name = "depyler-oracle"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ML-powered compile error classification and auto-fixing using aprender models"
keywords = ["depyler", "ml", "error-classification", "auto-fix"]
categories = ["development-tools"]

[features]
default = []
training = []  # CITL training pipeline (requires external entrenar/arrow/parquet deps - not shipped)
gpu = ["aprender/gpu"]  # Enable GPU acceleration for ML training (adds wgpu/trueno stack)
compressed-models = ["aprender/format-compression"]  # Zstd compression (lossless, 14x smaller)
api-fallback = []  # HTTP API fallback for hybrid transpiler (requires ureq dep - not shipped)

[dependencies]
# Depyler core for error types
depyler-core = { version = "3.25.0", path = "../depyler-core" }

# ML models from aprender
# Features: parallel (rayon), gpu (wgpu via trueno)
# Issue #210: Code2Vec embeddings and GNN capabilities
aprender = { version = "0.20.2", default-features = false }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Regex for pattern matching in autofixer
regex.workspace = true

# AST parsing for Code2Vec (GH-210 Phase 2)
syn = { workspace = true, features = ["full", "parsing", "visit"] }
quote.workspace = true
rustpython-parser.workspace = true
rustpython-ast.workspace = true

# Home directory detection
dirs = "5"

# Timestamps for training data
chrono = "0.4"

# UUID parsing for pattern IDs
uuid = "1.18"

# Directory traversal for corpus extraction
walkdir = "2"

# Glob pattern matching for UTOL
glob = "0.3"

# CLI parsing for binary
clap = { version = "4", features = ["derive"] }

# HTTP client for API fallback - removed to reduce dep count (CB-081)
# Enable api-fallback feature and add ureq dep to restore
# ureq = { version = "2.9", features = ["json"] }

[[example]]
name = "oracle_query_loop_demo"
required-features = ["training"]

[[example]]
name = "train_unified_corpus"
required-features = ["training"]

[[example]]
name = "train_ambiguity_corpus"
required-features = ["training"]

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
