[package]
name = "depyler-quality"
version = "0.3.0"
edition = "2021"
description = "Quality gates and metrics for Depyler"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
smallvec = { version = "1.0", features = ["serde"] }
depyler-core = { path = "../depyler-core" }
depyler-analyzer = { path = "../depyler-analyzer" }
depyler-annotations = { path = "../depyler-annotations" }
tempfile = "3.2"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"

[dev-dependencies]