[package]
name = "depyler-quality"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Quality gates and metrics for Depyler"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
smallvec = { version = "1.0", features = ["serde"] }
depyler-core = { version = "1.0.1", path = "../depyler-core" }
depyler-analyzer = { version = "1.0.1", path = "../depyler-analyzer" }
depyler-annotations = { version = "1.0.1", path = "../depyler-annotations" }
tempfile = "3.2"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"

[dev-dependencies]